# Bayer-CFA-Image-Compression

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  main.cpp
include/: DF-based.hpp  demosaicing.hpp  img.hpp  luma.hpp
src/: DF-based.cpp  demosaicing.cpp  img.cpp  luma.cpp
